@@ -11,6 +11,7 @@ ikiwiki (3.20110716) UNRELEASED; urgency=low
   * po: Add `LANG_CODE` and `LANG_NAME` template variables. (intrigeri)
   * Fix typo in Danish translation of shortcuts page that caused expoentional
     regexp blowup.
+  * Fix escaping of html entities in permalinks.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2011 11:22:52 -0400
 
